# imdb_clean_ds

./: README.md  decompression.py  docker-compose.yml  extractor.py  main.py  pyproject.toml
src/: consts.py  decompression.py  env.py  extractor.py  main.py
