[project]
name = "imdb-clean-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "environs==14.2.0",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "ruff>=0.11.13",
]
